# stampfly_ecosystem

./: CLAUDE.md  README.md  install.bat  install.sh  requirements.txt  setup_env.bat  setup_env.sh  sf.cmd
.claude/plans/: wifi_sta_multi_ap.md
.claude/skills/commit/: SKILL.md
.claude/skills/post-progress/: SKILL.md
docs/: DOCUMENT_INDEX.md  README.md  getting-started.md  overview.md
docs/commands/: README.md  sf-doctor.md  sf-version.md
docs/contributing/: adding-firmware-commands.md
docs/education/: setup_guide.md  workshop_guide.md
docs/plans/: CLI_REFACTOR_PLAN.md  CONTROLLER_MENU_USB_PLAN.md  HARDWARE_TEST_PLAN.md  SERIAL_CLI_REBUILD_PLAN.md  TELLO_COMPAT_PLAN.md  WIFI_COMM_PLAN.md  WORKSHOP_SLIDES_RESTRUCTURE_PLAN.md  ecosystem-migration-plan.md  installer-architecture.md  wifi_command_implementation_plan.md
docs/setup/: README.md  linux.md  macos.md  windows.md
docs/tutorials/: flight_log_visualization.md
docs/university/: syllabus.md
firmware/controller/: CMakeLists.txt  README.md
firmware/vehicle/: CMakeLists.txt  PHASE3_TEST_GUIDE.md
firmware/vehicle/components/sf_svc_flight_command/: CMakeLists.txt  command_queue.cpp  flight_command.cpp
firmware/vehicle/components/sf_svc_flight_command/include/: command_queue.hpp  flight_command.hpp
lib/sfcli/: cli.py
ros/: README.md
scripts/: installer.py
tools/: extract_snippets.py  stampfly_cli.py  test_monitor.py
tools/eskf_sim/: optimizer.py
tools/sysid/: __init__.py  defaults.py  drag.py  inertia.py  motor.py  noise.py  params.py  validation.py  visualizer.py
(+216 files in other folders)
